Create the navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,42 @@
 
 {% block body %}
 <h1>My page title</h1>
-<p>My page content</p>
+
+<button type="button" class="btn btn-default btn-sm">
+  <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
+</button>
+
+<p>Lorem ipsum dolor sit amet, cum autem exerci te. Appareat legendos assentior ea nec. Et autem error eam. Detraxit posidonium voluptatibus ex sed, insolens instructior eu vel, per ex docendi perfecto. Utroque persecuti an est.</p>
+
+<div class="well">
+  <p>Ut est accumsan consequuntur, nec idque probatus postulant eu. Erant mollis complectitur ei eos, dicunt maluisset at sed, ut eum partem nonumes adipiscing. Ea debet ridens duo. Sit an errem essent, id alia viderer periculis vel. Vim sonet vocent intellegebat ne. Soluta commodo cu vel, case torquatos sed no. Ullum vocent interpretaris pro in, qui te clita accusam mentitum.</p>
+</div>
+
+<p>Vel no soleat rationibus. Ut stet euripidis vel, vidit nonumes gloriatur in vim. Quot labore eligendi ei his. Vel ne eleifend recteque omittantur. Et accusamus assentior mediocritatem sit, odio elaboraret dissentiunt ut pri. Duo semper doctus te, ne possit disputando cum.</p>
+
+<p>Ad lorem putant vivendum sed, laudem verear no mel. Quaeque constituam interpretaris ea vix, munere argumentum per ea, et odio everti iriure pri. Eam ea vidisse omnesque tractatos. Iusto temporibus quo in, has id detracto consequat. At est intellegat necessitatibus.</p>
+
+<p>Justo epicuri delicata an has, an nec augue labore comprehensam, an sit alii hendrerit. Purto brute voluptua vis ut. Pri erat labore at, admodum incorrupte quo et, ne dolorum admodum mei. Eu est viris assentior forensibus, sale dicat cu mea. Ex has nulla lucilius tractatos, ne dicat integre oporteat est.</p>
+
+
+<p>Lorem ipsum dolor sit amet, cum autem exerci te. Appareat legendos assentior ea nec. Et autem error eam. Detraxit posidonium voluptatibus ex sed, insolens instructior eu vel, per ex docendi perfecto. Utroque persecuti an est.</p>
+
+<p>Ut est accumsan consequuntur, nec idque probatus postulant eu. Erant mollis complectitur ei eos, dicunt maluisset at sed, ut eum partem nonumes adipiscing. Ea debet ridens duo. Sit an errem essent, id alia viderer periculis vel. Vim sonet vocent intellegebat ne. Soluta commodo cu vel, case torquatos sed no. Ullum vocent interpretaris pro in, qui te clita accusam mentitum.</p>
+
+<p>Vel no soleat rationibus. Ut stet euripidis vel, vidit nonumes gloriatur in vim. Quot labore eligendi ei his. Vel ne eleifend recteque omittantur. Et accusamus assentior mediocritatem sit, odio elaboraret dissentiunt ut pri. Duo semper doctus te, ne possit disputando cum.</p>
+
+<p>Ad lorem putant vivendum sed, laudem verear no mel. Quaeque constituam interpretaris ea vix, munere argumentum per ea, et odio everti iriure pri. Eam ea vidisse omnesque tractatos. Iusto temporibus quo in, has id detracto consequat. At est intellegat necessitatibus.</p>
+
+<p>Justo epicuri delicata an has, an nec augue labore comprehensam, an sit alii hendrerit. Purto brute voluptua vis ut. Pri erat labore at, admodum incorrupte quo et, ne dolorum admodum mei. Eu est viris assentior forensibus, sale dicat cu mea. Ex has nulla lucilius tractatos, ne dicat integre oporteat est.</p>
+
+
+<p>Lorem ipsum dolor sit amet, cum autem exerci te. Appareat legendos assentior ea nec. Et autem error eam. Detraxit posidonium voluptatibus ex sed, insolens instructior eu vel, per ex docendi perfecto. Utroque persecuti an est.</p>
+
+<p>Ut est accumsan consequuntur, nec idque probatus postulant eu. Erant mollis complectitur ei eos, dicunt maluisset at sed, ut eum partem nonumes adipiscing. Ea debet ridens duo. Sit an errem essent, id alia viderer periculis vel. Vim sonet vocent intellegebat ne. Soluta commodo cu vel, case torquatos sed no. Ullum vocent interpretaris pro in, qui te clita accusam mentitum.</p>
+
+<p>Vel no soleat rationibus. Ut stet euripidis vel, vidit nonumes gloriatur in vim. Quot labore eligendi ei his. Vel ne eleifend recteque omittantur. Et accusamus assentior mediocritatem sit, odio elaboraret dissentiunt ut pri. Duo semper doctus te, ne possit disputando cum.</p>
+
+<p>Ad lorem putant vivendum sed, laudem verear no mel. Quaeque constituam interpretaris ea vix, munere argumentum per ea, et odio everti iriure pri. Eam ea vidisse omnesque tractatos. Iusto temporibus quo in, has id detracto consequat. At est intellegat necessitatibus.</p>
+
+<p>Justo epicuri delicata an has, an nec augue labore comprehensam, an sit alii hendrerit. Purto brute voluptua vis ut. Pri erat labore at, admodum incorrupte quo et, ne dolorum admodum mei. Eu est viris assentior forensibus, sale dicat cu mea. Ex has nulla lucilius tractatos, ne dicat integre oporteat est.</p>
 {% endblock %}
