--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <head>
   <title>
     {% block title %} Everest {% endblock %}
   </title>
+
+  <!-- Boostrap stuff -->
+  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="static/css/bootstrap-theme.min.css">-->
+  <script src="static/js/jquery-2.2.2.min.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+
+  <!-- Site customizations -->
+  <link rel="stylesheet" href="static/css/custom.css">
 </head>
 <body>
+
+  {% include 'navbar.html' %}
+
   {% block body %}{% endblock %}
 </body>
