--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <head>
   <title>
@@ -5,13 +6,12 @@
   </title>
 
   <!-- Boostrap stuff -->
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
-  <!--<link rel="stylesheet" href="static/css/bootstrap-theme.min.css">-->
-  <script src="static/js/jquery-2.2.2.min.js"></script>
-  <script src="static/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <script src="{% static 'js/jquery-2.2.2.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
   <!-- Site customizations -->
-  <link rel="stylesheet" href="static/css/custom.css">
+  <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
 <body>
 
