--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -44,3 +44,24 @@ body {
   /*font-size: 15px;*/
   /*font-weight: bold;*/
 }
+
+#editor-box {
+  height: 400px;
+}
+#editor {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+#terminal-box {
+  height: 200px;
+}
+#terminal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
