--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,18 @@
     {% block title %} Everest {% endblock %}
   </title>
 
-  <!-- Boostrap stuff -->
+  <!-- Boostrap Core CSS -->
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+  <!-- Jquery -->
   <script src="{% static 'js/jquery-2.2.2.min.js' %}"></script>
+
+  <!-- Boostrap JS -->
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
   <!-- Site customizations -->
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+
 </head>
 <body>
 
